--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -2,3 +2,9 @@
   border: 0;
   box-shadow: none;
 }
+
+.reveal {
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  color: #222; }
