--- a/assets/PITCHME.css
+++ b/assets/PITCHME.css
@@ -7,4 +7,5 @@
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 30px;
   font-weight: normal;
-  color: #222; }
+  color: #222;
+}
